stats helper class with methods

--- a/MvcMessageLogger/Views/Users/Statistics.cshtml
+++ b/MvcMessageLogger/Views/Users/Statistics.cshtml
@@ -4,5 +4,5 @@
 
 @foreach(var user in Model.OrderByDescending(u => u.Messages.Count))
 {
-	<p>@user.Name has written @user.Messages.Count messages</p>
+	<p>@user.Username has written @user.Messages.Count messages</p>
 }
