Show action with links to edit and delete

--- a/MvcMessageLogger/Views/Users/Index.cshtml
+++ b/MvcMessageLogger/Views/Users/Index.cshtml
@@ -8,7 +8,7 @@
 	<div class="user-display">
 		<h3>@user.Username</h3>
 		<p>@user.Name</p>
-		<form method="get" action="/users/@user.Id/messages">
+		<form method="get" action="/users/@user.Id/details">
 			<button type="submit">Login</button>
 		</form>
 		<p>-----------------------------------</p>
