--- a/MvcMessageLogger/Views/Users/New.cshtml
+++ b/MvcMessageLogger/Views/Users/New.cshtml
@@ -1,13 +1,13 @@
-﻿<h1>New User</h1>
+﻿<h1 class="text-info">New User</h1>
 
 <form method="post" action="/users">
 	<div class="form-group">
-		<label for="name">Name:</label>
-		<input type="text" id="name" name="Name" />
+		<label class="form-label" for="name">Name:</label>
+		<input class="form-control" type="text" id="name" name="Name" />
 	</div>
 	<div class="form-group">
-		<label for="username">Username:</label>
-		<input type="text" id="username" name="Username" />
-	</div>
-	<button type="submit">Create User</button>
+		<label class="form-label" for="username">Username:</label>
+		<input class="form-control" type="text" id="username" name="Username" />
+	</div><br />
+	<button class="btn btn-success" type="submit">Create User</button>
 </form>
