--- a/MvcMessageLogger/Views/Messages/Edit.cshtml
+++ b/MvcMessageLogger/Views/Messages/Edit.cshtml
@@ -3,10 +3,10 @@
 	var message = ViewData["Message"] as Message;
 }
 
-<h1>Edit Message</h1>
+<h1 class="text-warning">Edit Message</h1>
 
 <form method="post" action="/users/@Model.Id/messages/update/@message.Id">
-	<label for="content">Message:</label>
-	<input type="text" id="content" name="Content" value="@message.Content" /><br /><br />
-	<button type="submit">Update Message</button>
+	<label class="form-label" for="content">Message:</label>
+	<input type="text" class="form-control" id="content" name="Content" rows="3" value="@message.Content"></input><br /><br />
+	<button class="btn btn-success" type="submit">Update Message</button>
 </form>
