--- a/MvcMessageLogger/Views/Users/Edit.cshtml
+++ b/MvcMessageLogger/Views/Users/Edit.cshtml
@@ -1,15 +1,15 @@
 ﻿@model User
 
-<h1>Edit User</h1>
+<h1 class="text-warning">Edit User</h1>
 
 <form method="post" action="/users/update/@Model.Id">
 	<div class="form-group">
-		<label for="name">Name:</label>
-		<input type="text" id="name" name="Name" value="@Model.Name" />
+		<label class="form-label" for="name">Name:</label>
+		<input class="form-control" type="text" id="name" name="Name" value="@Model.Name" />
 	</div>
 	<div class="form-group">
-		<label for="username">Username:</label>
-		<input type="text" id="username" name="Username" value="@Model.Username" />
-	</div>
-	<button type="submit">Update User</button>
+		<label  class="form-label" for="username">Username:</label>
+		<input  class="form-control" type="text" id="username" name="Username" value="@Model.Username" />
+	</div><br />
+	<button class="btn btn-success" type="submit">Update User</button>
 </form>
