--- a/MvcMessageLogger/Views/Users/Statistics.cshtml
+++ b/MvcMessageLogger/Views/Users/Statistics.cshtml
@@ -4,15 +4,16 @@
 	var mostCommonWordPair = (KeyValuePair<string, int>) ViewData["MostCommonWord"];
 }
 
-<h1>Site Statistics</h1>
+<h1 class="text-info">Site Statistics</h1>
+<p>---------------------------------------------------</p>
 
-<h4>Hour With The Most Messages</h4>
-<p>The hour with the most messages is @hourWithMostMessagesPair.Key with @hourWithMostMessagesPair.Value Messages written</p>
+<h4 class="text-info">Hour With The Most Messages</h4>
+<p>The hour with the most messages is <span class="text-warning">@hourWithMostMessagesPair.Key</span> with @hourWithMostMessagesPair.Value Messages written</p>
 
-<h4>Most Common Word</h4>
-<p>The most commonly used word is @mostCommonWordPair.Key with @mostCommonWordPair.Value uses</p>
+<h4 class="text-info">Most Common Word</h4>
+<p>The most commonly used word is <span class="text-warning">@mostCommonWordPair.Key</span> with @mostCommonWordPair.Value uses</p>
 
-<h4>Users Ordered By Number Of Messages</h4>
+<h4 class="text-info">Users Ordered By Number Of Messages</h4>
 
 <ol>
 @foreach(var user in Model.OrderByDescending(u => u.Messages.Count))
